fixed intro and about spacing

--- a/portfolio/src/pages/landingPage.module.css
+++ b/portfolio/src/pages/landingPage.module.css
@@ -53,7 +53,7 @@
 
 .homeContainer{
     display: flex;
-    height: 40vw;
+    height: 82vh;
 }
 
 .socials{
